2022-05-02  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-video-links-intro): new section: "5.1.
	Subtitles".

	* eev-videolinks.el (ee-1stclassvideos-info): indicate that the
	video "2022findelispintro" has subtitles.

	* eev-blinks.el (find-customizeoption): new function.
	(find-customizevariable): new function.
	(find-customizeapropos): new function.
	(find-customizeface): new function.

	* eev-hlinks.el (ee-find-custom-f-links): new function.
	(ee-find-custom-v-links): new function.
	(ee-custom-f-re): new variable.
	(ee-custom-v-re): new variable.
	(ee-custom-f-bufferp): new function.
	(ee-custom-v-bufferp): new function.
	(ee-custom-bufferp): use `ee-custom-re' instead of the major mode.
	(ee-fhl-main-program): added `(:if (ee-custom-v-bufferp) ...)'.
	(ee-fhl-main-program): added `(:if (ee-custom-f-bufferp) ...)'.

2022-05-01  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-custom-lispify-tag-name): new function.
	(ee-find-custom-links): use `ee-custom-lispify-tag-name'.

	* eev-tlinks.el (find-wgeteevsubtitles-links)
	(ee-wgeteevsubtitles-cmds): new functions.
	(ee-1stclassvideos-dlsubs): new function.
	(ee-find-1stclassvideo-links): use `ee-1stclassvideos-dlsubs'.

	* eev-videolinks.el (ee-1stclassvideos-info): added `:subs ".vtt"'
	to some of the entries.

	* eev-wconfig.el: many changes.

2022-04-19  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-videolinks.el (ee-1stclassvideos-info): added
	"2022pict2elua".
	(find-2022pict2eluavideo): new function.

2022-04-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-hlinks.el (ee-find-efunctiondescr-links)
	(ee-find-evardescr-links, ee-find-efacedescr-links)
	(ee-find-man-links, ee-find-custom-links): added non-eev links.

2022-04-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-wconfig.el: new file.

2022-04-15  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-pdflike.el (find-pdftotext-page): define it explicitly.

	* eepitch.el (eepitch-eshell3): new function.
